// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`POST /api/editors/mesures it return date_nomination error 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "body",
      "msg": "date_nomination must be after or equivalent to date_premier_mesure",
      "param": "date_nomination",
      "value": "2020-01-01",
    },
  ],
}
`;

exports[`POST /api/editors/mesures it returns date_protection_en_cours error 1`] = `
Object {
  "errors": Array [
    Object {
      "location": "body",
      "msg": "date_nomination must be before or equivalent to date_protection_en_cours",
      "param": "date_nomination",
      "value": "2020-01-11",
    },
    Object {
      "location": "body",
      "msg": "champ_mesure is required",
      "param": "etats[0].champ_mesure",
    },
    Object {
      "location": "body",
      "msg": "champ_mesure is required",
      "param": "etats[1].champ_mesure",
    },
  ],
}
`;

exports[`POST /api/editors/mesures/batch it returns 201 1`] = `
Object {
  "mesures": Array [
    Object {
      "annee_naissance": 1957,
      "antenne_id": null,
      "cause_sortie": null,
      "civilite": "monsieur",
      "date_fin_mesure": null,
      "date_nomination": "2019-02-14",
      "date_premier_mesure": "2019-02-14",
      "date_protection_en_cours": "2019-04-18",
      "etats": Array [
        Object {
          "champ_mesure": "protection_bien_personne",
          "code_postal": "22190",
          "date_changement_etat": "2020-09-19",
          "lieu_vie": "domicile",
          "nature_mesure": "curatelle_simple",
          "pays": "FR",
          "type_etablissement": "etablissement_handicapes",
          "ville": "PLRIN SUR MER",
        },
      ],
      "latitude": 48.5442,
      "longitude": -2.77005,
      "numero_dossier": "TESTES",
      "numero_rg": "2020202020",
      "ressources": Array [
        Object {
          "annee": 2019,
          "niveau_ressource": 14246,
          "prestations_sociales": Array [],
        },
      ],
      "resultat_revision": null,
      "tribunal_siret": "17750111101763",
    },
    Object {
      "annee_naissance": 1982,
      "antenne_id": null,
      "cause_sortie": null,
      "civilite": "monsieur",
      "date_fin_mesure": null,
      "date_nomination": "2018-02-01",
      "date_premier_mesure": "2014-01-01",
      "date_protection_en_cours": "2020-05-12",
      "etats": Array [
        Object {
          "champ_mesure": "protection_personne",
          "code_postal": "75005",
          "date_changement_etat": "2018-02-01",
          "lieu_vie": "domicile",
          "nature_mesure": "curatelle_simple",
          "pays": "FR",
          "type_etablissement": null,
          "ville": "PARIS",
        },
        Object {
          "champ_mesure": "protection_bien_personne",
          "code_postal": "75005",
          "date_changement_etat": "2019-09-19",
          "lieu_vie": "domicile",
          "nature_mesure": "curatelle_simple",
          "pays": "FR",
          "type_etablissement": null,
          "ville": "PARIS",
        },
        Object {
          "champ_mesure": "protection_bien_personne",
          "code_postal": "22190",
          "date_changement_etat": "2020-05-12",
          "lieu_vie": "etablissement",
          "nature_mesure": "curatelle_renforcee",
          "pays": "FR",
          "type_etablissement": "autre_etablissement_s_ms",
          "ville": "PLRIN SUR MER",
        },
      ],
      "latitude": 48.5442,
      "longitude": -2.77005,
      "numero_dossier": "20190512",
      "numero_rg": "18&#x2F;A&#x2F;3245",
      "ressources": Array [
        Object {
          "annee": 2020,
          "niveau_ressource": 25000,
          "prestations_sociales": Array [],
        },
        Object {
          "annee": 2019,
          "niveau_ressource": 28000,
          "prestations_sociales": Array [],
        },
        Object {
          "annee": 2018,
          "niveau_ressource": 30000,
          "prestations_sociales": Array [],
        },
      ],
      "resultat_revision": null,
      "tribunal_siret": "17750111101763",
    },
  ],
}
`;
